# sigma-wallet

./: .gitignore  .gitmodules  BUGs.md  Cargo.toml  README.md
crates/account/: Cargo.toml
crates/account/src/: account.rs  accounts.rs  lib.rs  types.rs
crates/accounts/cex/binance/: Cargo.toml
crates/accounts/cex/binance/src/: lib.rs
crates/accounts/cex/kraken/: Cargo.toml
crates/accounts/cex/okx/: Cargo.toml
crates/accounts/crypto/: Cargo.toml
crates/accounts/crypto/src/: account.rs  lib.rs  types.rs
crates/accounts/wise/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: init.rs  main.rs  network.rs  provider.rs  wallet.rs
crates/core/: Cargo.toml
crates/core/src/: keys.rs  lib.rs  network.rs  provider.rs  types.rs  version.rs
crates/core/src/prelude/: mod.rs  sql.rs
crates/core/src/types/: asset.rs  mod.rs  network.rs
crates/guards/password/: Cargo.toml
crates/guards/password/src/: lib.rs
crates/providers/local/: Cargo.toml
crates/providers/local/src/: kv.rs  lib.rs  persistent_kv.rs  session_kv.rs  sql.rs
crates/providers/local/src/sql/: migration.rs  mod.rs  storage.rs  txn.rs  utils.rs
crates/providers/wasm/: Cargo.toml
crates/sigwa/: Cargo.toml
crates/sigwa/src/: lib.rs  migration.rs  provider.rs  wallet.rs
crates/sigwa/src/network/: data.rs  eip155_model.rs  main.rs  mod.rs  remote.rs  sql.rs  types.rs
crates/sigwa/src/utils/: aes_gcm.rs  mod.rs
crates/storages/file/: Cargo.toml
crates/storages/file/src/: lib.rs
crates/storages/redb/: Cargo.toml
crates/storages/sqlite/: Cargo.toml
crates/storages/sqlite/src/: lib.rs  storage.rs  txn.rs  utils.rs
crates/subaccounts/crypto/src/: lib.rs  types.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs  wallet.rs
providers/dev/: eip155.json  provider.json
providers/dev-v2/: chainlist.json  provider.json
providers/github/: chainlist.json  provider.json
sql/: 0001-network.sql
wallet/: .cursorrules  .gitignore  .prettierignore  .prettierrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
wallet/scripts/: build_debug_install.sh
wallet/src/: App.css  App.jsx  constants.js  store.js
wallet/src-tauri/: Cargo.toml  tauri.conf.json
wallet/src-tauri/capabilities/: mobile.json
wallet/src-tauri/icons/: icon.icns
wallet/src-tauri/src/: lib.rs  main.rs
wallet/src/components/: AddOptionForm.jsx  Button.jsx  GroupListItem.jsx  Icon.jsx  InfiniteList.jsx  LabelSelect.jsx  LabeledInput.jsx  ListItem.jsx  Nav.jsx  NavDesktop.jsx  PageHeader.jsx  Record.jsx  SectionList.jsx  SwipeableContainer.jsx  UnlabeledInput.jsx
wallet/src/components/list/: ListItemHorizontal.jsx  ListItemViertical.jsx
wallet/src/i18n/: en.json  i18n.js  zh-CN.json  zh-HK.json
wallet/src/js/: Database.js  EncryptedData.js  Provider.js  constants.js  store.js
wallet/src/js/broswer/: NetworkDatabase.js
wallet/src/js/utils/: BlockBack.js  loadNetwork.js
wallet/src/pages/: Account.jsx  Activity.jsx  Wallet.jsx
wallet/src/pages/about/: Language.jsx  Me.jsx  Network.jsx  NetworkInfo.jsx  Notification.jsx  Provider.jsx  Theme.jsx  TimeFormat.jsx
wallet/src/pages/about/settings/: Language.jsx  Network.jsx  NetworkInfo.jsx  Provider.jsx  Theme.jsx  TimeFormat.jsx
wallet/src/pages/account/: Account.jsx  AddAccount.jsx  CreateAccount.jsx  Password.jsx
wallet/src/pages/recipient/: Recipient.jsx  RecipientInfo.jsx
wallet/src/pages/welcome/: AddAccount.jsx  Complete.jsx  Password.jsx  Welcome.jsx
wallet/src/utils/: checker.js  provider.js
