[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/sigwa",
    # "crates/cli",
    "crates/guards/password",
    "crates/storages/file",
    "crates/storages/redb",
    "crates/accounts/crypto",
    "crates/accounts/cex/binance",
    "crates/accounts/cex/okx",
    "crates/accounts/cex/kraken",
    "crates/accounts/wise",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.105" }
async-trait = "0.1.75"
anyhow = { version = "1.0.95", features = ["backtrace"] }

alloy-primitives = "1.1.0"

aes-gcm = "0.10.0"
sha3 = "0.10.0"
rand_core = { version = "0.6", default-features = false }
hex = "0.4.3"
log = "0.4.21"

reqwest = { version = "0.12.11" }

tokio = { version = "1.41.1" }

sigwa-core = { path = "crates/core" }
sigwa-wallet = { path = "crates/sigwa" }
sigwa-guards-password = { path = "crates/guards/password" }
sigwa-storages-file = { path = "crates/storages/file" }
