[package]
name = "sigwa-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
sigwa-core = { workspace = true }

anyhow = { workspace = true }
alloy-primitives = { workspace = true }
rand_core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

aes-gcm = { workspace = true }

reqwest = { workspace = true }

sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio"] }
tokio = { workspace = true, features = ["fs"] }

log = { workspace = true }
