[package]
name = "sigwa-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
sigwa-core = { workspace = true }

anyhow = { workspace = true }
alloy-primitives = { workspace = true }
rand_core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
