[package]
name = "sigwa-account-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
sigwa-core = { workspace = true }
sigwa-wallet = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

alloy-primitives = { workspace = true }

tokio = { workspace = true, features = ["fs"] }

anyhow = { workspace = true }

bip32 = { version = "0.5.3", features = ["mnemonic", "bip39"] }
