[package]
name = "sigwa-account-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
sigwa-core = { workspace = true }
sigwa-wallet = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

alloy-primitives = { workspace = true, features = ["k256"] }
anyhow = { workspace = true }
rand_core = { workspace = true }

tokio = { workspace = true, features = ["fs"] }


bip32 = { version = "0.5.3", features = ["mnemonic", "bip39"] }
