[package]
name = "sigwa-provider-local"
version.workspace = true
edition.workspace = true

[dependencies]
sigwa-core = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }

sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-rustls"] }
redb = "2.5.0"

tokio = { workspace = true }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
